--- a/public/style.css
+++ b/public/style.css
@@ -7,3 +7,32 @@ body{
   height: 500px;
   background-size: 50% 50%;
 }
+.section2{
+  width: 200px;
+  height: 100px;
+  border-radius: 15px;
+  border-style: dotted; color: blue;
+}
+
+.section3{
+  width: 100px;
+  height: 100px;
+  background: url("rat.mp4");
+
+  .video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.color-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: lightblue;
+  width: 100%;
+  height: 100vh;
+  opacity: 0.5;
+}
+}
