--- a/public/style.css
+++ b/public/style.css
@@ -1,38 +1,97 @@
-body{
-  background-color: yellow;
+.colors-container {
+    margin: auto;
+    border-radius: 50%;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    height: 315px;
+    overflow: hidden;
+    position: relative;
+    width: 315px;
 }
-.section{
-  background: url("Dogecoin_logo.0.png");
-  width: 700px;
-  height: 500px;
-  background-size: 50% 50%;
-}
-.section2{
-  width: 200px;
-  height: 100px;
-  border-radius: 15px;
-  border-style: dotted; color: blue;
-}
-
-.section3{
-  width: 100px;
-  height: 100px;
-  background: url("rat.mp4");
-
-  .video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
+.color {
+    background-color: #9ACD32;
+    height: auto;
+    width: 100%;
 }
 
-.color-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: lightblue;
-  width: 100%;
-  height: 100vh;
-  opacity: 0.5;
+.skyblue {
+    background-color: #22a6b3;
 }
+.skyblue.light {
+    background-color: #7ed6df;
+}
+
+.violet {
+    background-color: #be2edd;
+}
+.violet.light {
+    background-color: #e056fd;
+}
+
+.orange {
+    background-color: #f0932b;
+}
+.orange.light {
+    background-color: #ffbe76;
+}
+
+.green {
+    background-color: #6ab04c;
+}
+.green.light {
+    background-color: #badc58;
+}
+.score-container {
+    color: whitesmoke;
+    display: flex;
+    font-weight: bold;
+    font-size: 2rem;
+    justify-content: center;
+    margin-bottom: 30px;
+    width: 100%;
+}
+#score {
+    margin-left: 5px;
+}
+
+.play-button {
+    background-color: white;
+    cursor: pointer;
+    display: flex;
+    height: 40px;
+    width: 100px;
+}
+
+.hidden {
+    display: none;
+}
+
+
+@media (min-width: 420px) {
+    .colors-container {
+        height: 415px;
+        width: 415px;
+    }
+}
+@media (min-width: 520px) {
+    .score-container {
+        font-size: 3rem;
+    }
+    .colors-container {
+        height: 515px;
+        width: 515px;
+    }
+    .play-button {
+        font-size: 3rem;
+        height: 80px;
+        left: calc(50% - 80px);
+        top: calc(50% - 40px);
+        width: 160px;
+    }
+}
+@media (min-width: 620px) {
+    .colors-container {
+        height: 615px;
+        width: 615px;
+    }
 }
